--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,29 @@
-version: '3'
+version: '2'
 services:
 
   zookeeper:
-    image: wurstmeister/zookeeper
-    hostname: zoohost
+    image: confluentinc/cp-zookeeper:latest
     ports:
       - "2181:2181"
     environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
+        ZOOKEEPER_CLIENT_PORT: 2181
+        ZOOKEEPER_TICK_TIME: 2000
+    volumes:
+      - ./zk-data/zookeeper/data:/var/lib/zookeeper/data
 
   kafka:
-    image: wurstmeister/kafka
-    hostname: kafkahost
+    image: confluentinc/cp-kafka:latest
     ports:
-      - "9092:9092"
+      - 9092:9092
     environment:
       KAFKA_ADVERTISED_HOST_NAME: 192.168.1.84
-      KAFKA_ZOOKEEPER_CONNECT: 'zoohost:2181'
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_BROKER_ID: 1
-      KAFKA_CREATE_TOPICS: "test-topic"
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:9092'
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
+    volumes:
+      - ./zk-data/kafka/data:/var/lib/kafka/data
     depends_on:
       - zookeeper
 
